add:添加登录页面，404页面

--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,9 @@
                     Noto Sans CJK SC, WenQuanYi Micro Hei, sans-serif;
             }
         </style>
-        <title><%= htmlWebpackPlugin.options.title %></title>
+        <title>知乎问答</title>
     </head>
     <body>
-        <noscript>
-            <strong
-                >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't
-                work properly without JavaScript enabled. Please enable it to
-                continue.</strong
-            >
-        </noscript>
         <div id="app"></div>
-        <!-- built files will be auto injected -->
     </body>
 </html>
